// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row Align Items renders center alignment if provided 1`] = `
<div
  className="row align-items-center "
  data-garden-id="grid.row"
  data-garden-version="version"
/>
`;

exports[`Row Align Items renders end alignment if provided 1`] = `
<div
  className="row align-items-end "
  data-garden-id="grid.row"
  data-garden-version="version"
/>
`;

exports[`Row Align Items renders start alignment if provided 1`] = `
<div
  className="row align-items-start "
  data-garden-id="grid.row"
  data-garden-version="version"
/>
`;

exports[`Row Justify Content renders around justify content if provided 1`] = `
<div
  className="row justify-content-around "
  data-garden-id="grid.row"
  data-garden-version="version"
/>
`;

exports[`Row Justify Content renders between justify content if provided 1`] = `
<div
  className="row justify-content-between "
  data-garden-id="grid.row"
  data-garden-version="version"
/>
`;

exports[`Row Justify Content renders center justify content if provided 1`] = `
<div
  className="row justify-content-center "
  data-garden-id="grid.row"
  data-garden-version="version"
/>
`;

exports[`Row Justify Content renders end justify content if provided 1`] = `
<div
  className="row justify-content-end "
  data-garden-id="grid.row"
  data-garden-version="version"
/>
`;

exports[`Row Justify Content renders start justify content if provided 1`] = `
<div
  className="row justify-content-start "
  data-garden-id="grid.row"
  data-garden-version="version"
/>
`;

exports[`Row renders default styling 1`] = `
<div
  className="row "
  data-garden-id="grid.row"
  data-garden-version="version"
/>
`;

exports[`Row renders without gutters if provided 1`] = `
<div
  className="row no-gutters "
  data-garden-id="grid.row"
  data-garden-version="version"
/>
`;
